--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+   ext.anko_version = "0.10.8"
+    ext.koin_version = '0.8.0'
+    ext.retrofit_version = '2.4.0'
+    ext.okhttp_version = '3.11.0'
     repositories {
         google()
         jcenter()
