--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -36,8 +35,8 @@ android {
 dependencies {
 
 
-   implementation "org.jetbrains.anko:anko-common:$anko_version"
-   implementation "org.koin:koin-android:$koin_version"
+    implementation "org.jetbrains.anko:anko-common:$anko_version"
+    implementation "org.koin:koin-android:$koin_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -47,11 +46,24 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation ' com.google.code.gson: gson: 2.8.5 '
-    implementation ' com.squareup.retrofit2: retrofit: $retrofit_version '
-    implementation "com.squareup.retrofit2:converter-scalars: 2.4.0"
-    implementation ' com.squareup.retrofit2: converter-gson: 2.4.0 '
-    implementation ' io.reactivex: rxjava: 1.1.6 '
-    implementation ' io.reactivex: rxandroid: 1.2.1 '
-    implementation ' com.squareup.retrofit2: adapter-rxjava: 2.1.0 '
+    //Gson
+//    def googleVersion = "2.8.5"
+//    implementation "com.google.code.gson: gson:$googleVersion"
+
+    // Retrofit
+    def retrofitVersion = "2.4.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+
+    // RxAndroid
+    def rxandroid_version = '2.1.1'
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    // RxJava
+    def rxjava_version = '2.2.9'
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    // Rx-Retrofit Call Adapter
+    def rxcalladapter_version = '2.5.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rxcalladapter_version"
+
 }
