--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     // optional - ReactiveStreams support for LiveData
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
 
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
     // optional - Test helpers for LiveData
     testImplementation "androidx.arch.core:core-testing:$arch_version"
 //    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
