--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -126,5 +127,14 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.22'
     kapt 'com.google.dagger:dagger-android-processor:2.22'
     kapt 'com.google.dagger:dagger-compiler:2.22'
+
+    //HILt
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    // When using Java.
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
 }
