--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,10 @@ dependencies {
     def rxcalladapter_version = '2.5.0'
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rxcalladapter_version"
 
+    //paging
+    def paging_version = "2.1.2"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
     //Room
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
@@ -136,5 +140,6 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
 
 }
