--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,16 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables . useSupportLibrary =  true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+                arg("room.incremental", "true")
+                arg("room.expandProjection", "true")
+            }
+        }
     }
 
     buildTypes {
@@ -146,5 +154,24 @@ dependencies {
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
+    // Coroutines
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+
+//    // Navigation
+//    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha08"
+//    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha08"
+
+    //navigation
+
+    def nav_version = "2.3.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Test
+    testImplementation ' junit: junit: 4.12 '
+    androidTestImplementation ' androidx.test.ext: junit: 1.1.1 '
+    androidTestImplementation ' androidx.test.espresso: espresso-core: 3.2.0 '
+    androidTestCompile "android.arch.core:core-testing:1.1.0"
 
 }
