--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    // google librery
+    implementation 'com.google.android.material:material:1.2.1'
+
+
     def lifecycle_version = "2.2.0"
     def arch_version = "2.1.0"
 
@@ -145,6 +149,7 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
 
 
 }
