--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,9 +158,9 @@ dependencies {
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
-    // Coroutines
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+    //Coroutines avec reseau
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
 //    // Navigation
 //    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha08"
