--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,4 +185,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
+    // picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
